--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Skilful Buddies",
+  "name": "Skilful-Buddies",
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
@@ -25,6 +25,7 @@
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "ngx-facebook": "^2.4.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
