--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ngx-facebook": "^2.4.0",
     "rxjs": "^5.5.2",
     "snazzy-info-window": "^1.1.0",
+    "socket.io-client": "^2.0.4",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
